[metadata]
name = litho
version = 0.0.1
author = Iñigo Echeverría
author_email = ie@idest.io
description = Lithospheric thermomechanical model in 1D
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/idest/andeslab
project_urls =
    Bug Tracker = https://github.com/idest/andeslab/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    matplotlib
    xarray
    cartopy

[options.packages.find]
where = src
